--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,9 @@
 <project name="Salesforce" default="test" basedir="." xmlns:sf="antlib:com.salesforce">    
 
+  <taskdef uri="antlib:com.salesforce"
+        resource="com/salesforce/antlib.xml"
+        classpath="${basedir}/lib/ant-salesforce.jar"/>
+
     <property file="build.properties"/>
     <property environment="env"/>  
 
