--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
           username="${sf.username}"
           password="${sf.password}"
           serverurl="${sf.serverurl}"
-          deployRoot="${basedir}"           
+          deployRoot="src"           
           runAllTests="true" />
     </target>
 
