--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
           password="${sf.password}"
           serverurl="${sf.serverurl}"
           deployRoot="src"           
-          runAllTests="true" />
+          testLevel="RunLocalTests" />
     </target>
 
 </project>
