--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
-sf.servelurl = https://www.salesforce.com
+sf.servelurl = https://login.salesforce.com
 sf.username = target@target.com
 sf.password = Lucky@123LpZz4KkvJWuuE1usfBaPYobmh
