--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
-sf.servelurl = https://login.salesforce.com
-sf.username = target@target.com
-sf.password = Lucky@999DzhxG7zPPJ2eEr6YG8f58JyTD
+sf.serverurl = https://login.salesforce.com
+sf.username = omar@infoglen.com.dev
+sf.password = TickT0ck5iarg87SPW9T6xoHV2jazwXG
